<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SegundaActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest2" />

    <TextView
        android:id="@+id/pergunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="40dp"
        android:text="@string/pergunta2" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pergunta2"
        android:layout_below="@+id/pergunta2"
        android:layout_marginTop="38dp" >

        <RadioButton
            android:id="@+id/radio1Act2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opt1Act2" />

        <RadioButton
            android:id="@+id/radio2Act2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt2Act2" />

        <RadioButton
            android:id="@+id/radio3Act2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt3Act2" />

        <RadioButton
            android:id="@+id/radio4Act2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt4Act2" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/radioGroup2"
        android:text="@string/confAct2" />

</RelativeLayout>