<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuartaActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/quest4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/confAct4" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="75dp" >

        <RadioButton
            android:id="@+id/radio1Act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/opt1Act4" />

        <RadioButton
            android:id="@+id/radio2Act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt2Act4" />

        <RadioButton
            android:id="@+id/radio3Act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt3Act4" />

        <RadioButton
            android:id="@+id/radio4Act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt4Act4" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/pergunta4" />

</RelativeLayout>
