<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TerceiraActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="21dp"
        android:text="@string/quest3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup3"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="17dp"
        android:text="@string/pergunta3" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" >

        <RadioButton
            android:id="@+id/radio1Act3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/opt1Act3" />

        <RadioButton
            android:id="@+id/radio2Act3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt2Act3" />

        <RadioButton
            android:id="@+id/radio3Act3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt3Act3" />

        <RadioButton
            android:id="@+id/radio4Act3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt4Act3" />
    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/radioGroup3"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="40dp"
        android:text="@string/confAct3" />

</RelativeLayout>